<resources>
    <string name="app_name">MtcdAutoVolume</string>
    <string name="ToggleSpeedUnit">Toggle speed unit</string>
    <string name="Save">Save</string>
    <string name="SetLinear">Set linear</string>
    <string name="UnableToCreateVolumeLevelSettings">Unable to create volume level settings</string>
    <string name="UnableToStoreVolumeLevelSettings">Unable to store volume level settings</string>
    <string name="VolumeLevelsSaved">Volume levels have been saved</string>
    <string name="UnableToReadVolumeLevelSettings">Unable to read volume level settings</string>
    <string name="AutoVolumeEnabled">Auto volume has been enabled</string>
    <string name="AutoVolumeDisabled">Auto volume has been disabled</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="StartRange">Start [%]</string>
    <string name="EndRange">End [%]</string>
    <string name="ProvideRange">Provide range</string>
    <string name="InvalidRange">Provided range is invalid</string>
</resources>
